syntax = "proto3";

option csharp_namespace = "CookingMedia.Recipe.Api";
import "Google/Api/annotations.proto";
import "google/protobuf/empty.proto";
import "model.proto";
package greet;

service RecipeCategoryController {
	rpc Search (SearchRecipeCategoryRequest) returns (SearchRecipeCategoryResponse) {
		option (google.api.http) = {
			get: "/api/recipe-categories"
		};
	};

	rpc Get (GetRecipeCategoryRequest) returns (RecipeCategoryModel) {
		option (google.api.http) = {
			get: "/api/recipe-categories/{id}"
		};
	};

	rpc Add (AddRecipeCategoryRequest) returns (RecipeCategoryModel) {
		option (google.api.http) = {
			post: "/api/recipe-categories"
			body: "*"
		};
	};

	rpc Update (UpdateRecipeCategoryRequest) returns (google.protobuf.Empty) {
		option (google.api.http) = {
			put: "/api/recipe-categories/{id}"
			body: "*"
		};
	};

	rpc Delete (DeelteRecipeCategoryRequest) returns (google.protobuf.Empty) {
		option (google.api.http) = {
			delete: "/api/recipe-categories/{id}"
		};
	};
}

message SearchRecipeCategoryRequest {
	string name = 1;
	int32 page = 2;
	int32 page_size = 3;
}

message SearchRecipeCategoryResponse {
	repeated RecipeCategoryModel result = 1;
	PagingResultModel paging = 2;
}

message GetRecipeCategoryRequest {
	int32 id = 1;
}

message AddRecipeCategoryRequest {
	string name = 1;
	int32 display_index = 2;
}

message UpdateRecipeCategoryRequest {
	string name = 1;
	int32 display_index = 2;
	int32 id = 100;
}

message DeelteRecipeCategoryRequest {
	int32 id = 1;
}
